force-app/main/default/objects/Human_Resource_Form__c/Human_Resource_Form__c.object-meta.xml
<CustomObject>
    <label>Human Resource Form</label>
    <nameField>
        <displayFormat>HR-{0000}</displayFormat>
        <label>Human Resource Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Human Resource Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>