force-app/main/default/objects/Human_Resource_Form__c/fields/All_Equipment_Returned__c.field-meta.xml
<CustomField>
    <fullName>All_Equipment_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All issued equipment has been returned</inlineHelpText>
    <label>All Equipment Returned</label>
    <type>Checkbox</type>
</CustomField>