force-app/main/default/objects/Human_Resource_Form__c/fields/Comments_on_Worker_Change__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_Worker_Change__c</fullName>
    <label>Comments on Worker Change</label>
    <type>TextArea</type>
</CustomField>