force-app/main/default/objects/Human_Resource_Form__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>Worker&apos;s department</inlineHelpText>
    <label>Department</label>
    <length>50</length>
    <type>Text</type>
</CustomField>