force-app/main/default/objects/Human_Resource_Form__c/fields/Department_Description__c.field-meta.xml
<CustomField>
    <fullName>Department_Description__c</fullName>
    <label>Department Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>010005-Client Services Ops COS</fullName>
            </value>
            <value>
                <fullName>010010-Client Services Ops KC</fullName>
            </value>
            <value>
                <fullName>010012-Client Services Ops-Remote</fullName>
            </value>
            <value>
                <fullName>010014-Service Support-Automated</fullName>
            </value>
            <value>
                <fullName>010015-Service Support-Automated</fullName>
            </value>
            <value>
                <fullName>010017-ReadyTalk Client Services</fullName>
            </value>
            <value>
                <fullName>010018-Client Services SoundPath</fullName>
            </value>
            <value>
                <fullName>010024-GlobalMeet Experts</fullName>
            </value>
            <value>
                <fullName>010025-Service Support Attended</fullName>
            </value>
            <value>
                <fullName>010027-GlobalMeet Experts</fullName>
            </value>
            <value>
                <fullName>010029-Service Support-Attended</fullName>
            </value>
            <value>
                <fullName>010520-Client Services-Canada</fullName>
            </value>
            <value>
                <fullName>010615-TalkPoint US Client Service</fullName>
            </value>
            <value>
                <fullName>010622-Central Desktop Client Services</fullName>
            </value>
            <value>
                <fullName>011005-Client Services Reservations COS</fullName>
            </value>
            <value>
                <fullName>011006-Client Services Res COS</fullName>
            </value>
            <value>
                <fullName>011011-Client Services Res KC</fullName>
            </value>
            <value>
                <fullName>011400-Client Svc Enhanced Svcs</fullName>
            </value>
            <value>
                <fullName>011401-Clerical</fullName>
            </value>
            <value>
                <fullName>011402-Clerical</fullName>
            </value>
            <value>
                <fullName>011700-Event Services</fullName>
            </value>
            <value>
                <fullName>011701-Event Services</fullName>
            </value>
            <value>
                <fullName>011702-ReadyTalk Event Services</fullName>
            </value>
            <value>
                <fullName>011900-Client Services Management</fullName>
            </value>
            <value>
                <fullName>011901-Client Services Mgmt</fullName>
            </value>
            <value>
                <fullName>011905-Training and Quality</fullName>
            </value>
            <value>
                <fullName>011906-Training and Quality</fullName>
            </value>
            <value>
                <fullName>011910-Global CS Management</fullName>
            </value>
            <value>
                <fullName>011911-Global CS Management</fullName>
            </value>
            <value>
                <fullName>012005-Audio Operations US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>