force-app/main/default/objects/Human_Resource_Form__c/fields/Department_Group__c.field-meta.xml
<CustomField>
    <fullName>Department_Group__c</fullName>
    <inlineHelpText>Region/Department</inlineHelpText>
    <label>Department Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMEA/APAC-Customer Care</fullName>
            </value>
            <value>
                <fullName>EMEA/APAC-Finance</fullName>
            </value>
            <value>
                <fullName>EMEA/APAC-Global IT</fullName>
            </value>
            <value>
                <fullName>EMEA/APAC-HR</fullName>
            </value>
            <value>
                <fullName>EMEA/APAC-Legal</fullName>
            </value>
            <value>
                <fullName>EMEA/APAC-Marketing</fullName>
            </value>
            <value>
                <fullName>EMEA/APAC-NA</fullName>
            </value>
            <value>
                <fullName>EMEA/APAC-PWN</fullName>
            </value>
            <value>
                <fullName>EMEA/APAC-Sales</fullName>
            </value>
            <value>
                <fullName>EMEA/APAC-Technology</fullName>
            </value>
            <value>
                <fullName>NAM-Administration</fullName>
            </value>
            <value>
                <fullName>NAM-Customer Care</fullName>
            </value>
            <value>
                <fullName>NAM-Exec Team</fullName>
            </value>
            <value>
                <fullName>NAM-Finance</fullName>
            </value>
            <value>
                <fullName>NAM-Global IT</fullName>
            </value>
            <value>
                <fullName>NAM-Marketing</fullName>
            </value>
            <value>
                <fullName>NAM-ReadyTalk</fullName>
            </value>
            <value>
                <fullName>NAM-RollCall</fullName>
            </value>
            <value>
                <fullName>NAM-Sales</fullName>
            </value>
            <value>
                <fullName>NAM-Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>