force-app/main/default/objects/Human_Resource_Form__c/fields/Desk_Equipt_Compilation__c.field-meta.xml
<CustomField>
    <fullName>Desk_Equipt_Compilation__c</fullName>
    <description>Pulls all selections from Desk Equipment Required into one field</description>
    <formula>IF(INCLUDES( Worker_will_require__c , &quot;1 Monitor&quot;), &quot;1 Monitor&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;2 Monitors&quot;), &quot;2 Monitors&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;Desktop&quot;), &quot;Desktop&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;Docking Station&quot;), &quot;Docking Station&quot; + &quot;,&quot; , NULL) +
IF(INCLUDES( Worker_will_require__c , &quot;Headset-Computer&quot;), &quot;Headset-Computer&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;Laptop&quot;), &quot;Laptop&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;Power User/Tech Laptop&quot;), &quot;Power User/Tech Laptop&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;Special Equipment&quot;), &quot;Special Equipment&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;Tablet-Android&quot;), &quot;Tablet-Android&quot; + &quot;,&quot; , NULL) +
IF(INCLUDES( Worker_will_require__c , &quot;Tablet-iPad&quot;), &quot;Tablet-iPad&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;Tablet-Windows&quot;), &quot;Tablet-Windows&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;Video Cam/Web Cam&quot;), &quot;Video Cam/Web Cam&quot; + &quot;,&quot; , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desk Equipt Compilation</label>
    <type>Text</type>
</CustomField>