force-app/main/default/objects/Human_Resource_Form__c/fields/Disconnect_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Home_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disconnect Home Phone?</label>
    <type>Checkbox</type>
</CustomField>