force-app/main/default/objects/Human_Resource_Form__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <inlineHelpText>Employee Number, if known</inlineHelpText>
    <label>Employee Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>