force-app/main/default/objects/Human_Resource_Form__c/fields/Facility_Comments__c.field-meta.xml
<CustomField>
    <fullName>Facility_Comments__c</fullName>
    <inlineHelpText>Additional comments</inlineHelpText>
    <label>Facility Comments</label>
    <type>TextArea</type>
</CustomField>