force-app/main/default/objects/Human_Resource_Form__c/fields/Group_Mailbox_Outlook_Distro__c.field-meta.xml
<CustomField>
    <fullName>Group_Mailbox_Outlook_Distro__c</fullName>
    <inlineHelpText>Grant access to this Group Mailbox and/or Outlook Distribution list(s)</inlineHelpText>
    <label>Group Mailbox/Outlook Distro</label>
    <length>150</length>
    <type>Text</type>
</CustomField>