force-app/main/default/objects/Human_Resource_Form__c/fields/In_Customer_Care__c.field-meta.xml
<CustomField>
    <fullName>In_Customer_Care__c</fullName>
    <label>In Customer Care?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes-Call Delivery</fullName>
            </value>
            <value>
                <fullName>Yes-Reservations</fullName>
            </value>
            <value>
                <fullName>Yes-Tier Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>