force-app/main/default/objects/Human_Resource_Form__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <inlineHelpText>Sur Name/Family Name</inlineHelpText>
    <label>Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>