force-app/main/default/objects/Human_Resource_Form__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Location worker will be associated with</inlineHelpText>
    <label>Locations</label>
    <referenceTo>Locations__c</referenceTo>
    <relationshipLabel>Human Resource Forms</relationshipLabel>
    <relationshipName>Human_Resource_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>