force-app/main/default/objects/Human_Resource_Form__c/fields/Logical_Access_Other__c.field-meta.xml
<CustomField>
    <fullName>Logical_Access_Other__c</fullName>
    <inlineHelpText>Please provide information if Other Systems was checked</inlineHelpText>
    <label>Logical Access - Other</label>
    <type>TextArea</type>
</CustomField>