force-app/main/default/objects/Human_Resource_Form__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <inlineHelpText>Enter the newvalue of information you would like to change (separate multiple items by comma)</inlineHelpText>
    <label>New Value</label>
    <type>TextArea</type>
</CustomField>