force-app/main/default/objects/Human_Resource_Form__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>