force-app/main/default/objects/Human_Resource_Form__c/fields/Physical_Access_Separation_Date__c.field-meta.xml
<CustomField>
    <fullName>Physical_Access_Separation_Date__c</fullName>
    <label>Physical Access Separation Date</label>
    <type>Date</type>
</CustomField>