force-app/main/default/objects/Human_Resource_Form__c/fields/Physical_Access_Separation_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Physical_Access_Separation_Urgency__c</fullName>
    <label>Physical Access Separation Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-High (30 minutes)</fullName>
            </value>
            <value>
                <fullName>2-Medium (End of day today)</fullName>
            </value>
            <value>
                <fullName>3-Low (Date in the future)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>