force-app/main/default/objects/Human_Resource_Form__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <inlineHelpText>Enter the previous value of information you would like to change (separate multiple items by comma)</inlineHelpText>
    <label>Previous Value</label>
    <type>TextArea</type>
</CustomField>