force-app/main/default/objects/Human_Resource_Form__c/fields/Primary_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Work_Location__c</fullName>
    <label>Primary Work Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Office</fullName>
            </value>
            <value>
                <fullName>Work From Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>