force-app/main/default/objects/Human_Resource_Form__c/fields/Re_Hire__c.field-meta.xml
<CustomField>
    <fullName>Re_Hire__c</fullName>
    <inlineHelpText>Is worker a re-hire?If yes, enter name used when previously employed at PGi.</inlineHelpText>
    <label>If Re-Hire Name When Previously Employed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>