force-app/main/default/objects/Human_Resource_Form__c/fields/Reason_for_New_Worker__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_New_Worker__c</fullName>
    <label>Reason for New Worker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Backfill (Exited the Company)</fullName>
            </value>
            <value>
                <fullName>Open (Incremental Addition)</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>