force-app/main/default/objects/Human_Resource_Form__c/fields/Supervisor_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Name__c</fullName>
    <inlineHelpText>Full name of worker&apos;s supervisor</inlineHelpText>
    <label>Supervisor&apos;s Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>