force-app/main/default/objects/Human_Resource_Form__c/fields/Teleservices_Comments__c.field-meta.xml
<CustomField>
    <fullName>Teleservices_Comments__c</fullName>
    <label>Teleservices Comments</label>
    <type>TextArea</type>
</CustomField>