force-app/main/default/objects/Human_Resource_Form__c/fields/Teleservices_Required__c.field-meta.xml
<CustomField>
    <fullName>Teleservices_Required__c</fullName>
    <inlineHelpText>If your request is to Change services, please use the Teleservices Comments field.</inlineHelpText>
    <label>Teleservices Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACD/Aspect Phone Setup</fullName>
            </value>
            <value>
                <fullName>Call Recording</fullName>
            </value>
            <value>
                <fullName>Direct Dial Phone</fullName>
            </value>
            <value>
                <fullName>Headset</fullName>
            </value>
            <value>
                <fullName>Phone Extension (No Direct Line)</fullName>
            </value>
            <value>
                <fullName>Ring Master</fullName>
            </value>
            <value>
                <fullName>Screen Capture</fullName>
            </value>
            <value>
                <fullName>VoiceMail</fullName>
            </value>
            <value>
                <fullName>Worker Speaks French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>