force-app/main/default/objects/Human_Resource_Form__c/fields/User_to_mimic__c.field-meta.xml
<CustomField>
    <fullName>User_to_mimic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For new worker&apos;s account, can you please provide the name of an example user who&apos;s permissions we should mirror?</inlineHelpText>
    <label>User to mimic</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Human_Resource_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>