force-app/main/default/objects/Human_Resource_Form__c/fields/Wireless_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Carrier__c</fullName>
    <label>Wireless Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airtel</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Au</fullName>
            </value>
            <value>
                <fullName>Bell</fullName>
            </value>
            <value>
                <fullName>Docomo</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Softbank</fullName>
            </value>
            <value>
                <fullName>Telenoir</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>Vodaphone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>