force-app/main/default/objects/Human_Resource_Form__c/fields/Wireless_Comments__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Comments__c</fullName>
    <label>Wireless Comments</label>
    <type>TextArea</type>
</CustomField>