force-app/main/default/objects/Human_Resource_Form__c/fields/Wireless_Device_Compilation__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Device_Compilation__c</fullName>
    <formula>IF(INCLUDES( Worker_will_require__c , &quot;Android&quot;), &quot;Android&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;Blackberry&quot;), &quot;Blackberry&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;iPhone&quot;), &quot;iPhone&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;Windows&quot;), &quot;Windows&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;International Dialing&quot;), &quot;International Dialing&quot; + &quot;,&quot; , NULL) + 
IF(INCLUDES( Worker_will_require__c , &quot;International Data Roaming&quot;), &quot;International Data Roaming&quot; + &quot;,&quot; , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wireless Device Compilation</label>
    <type>Text</type>
</CustomField>