force-app/main/default/objects/Human_Resource_Form__c/fields/Worker_Changes__c.field-meta.xml
<CustomField>
    <fullName>Worker_Changes__c</fullName>
    <label>Worker Changes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>End Date</fullName>
            </value>
            <value>
                <fullName>First Name</fullName>
            </value>
            <value>
                <fullName>Job Title</fullName>
            </value>
            <value>
                <fullName>Last Name</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>