force-app/main/default/objects/Human_Resource_Form__c/fields/Worker_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Worker_Email_Address__c</fullName>
    <inlineHelpText>Ex: test@pgi.com</inlineHelpText>
    <label>Worker Email Address</label>
    <type>Email</type>
</CustomField>