force-app/main/default/objects/Human_Resource_Form__c/recordTypes/New_Worker.recordType-meta.xml
<RecordType>
    <fullName>New_Worker</fullName>
    <active>true</active>
    <label>New Worker</label>
</RecordType>