force-app/main/default/objects/Human_Resource_Form__c/recordTypes/Worker_Change.recordType-meta.xml
<RecordType>
    <fullName>Worker_Change</fullName>
    <active>true</active>
    <label>Worker Change</label>
</RecordType>