force-app/main/default/objects/Human_Resource_Form__c/recordTypes/Worker_Separation.recordType-meta.xml
<RecordType>
    <fullName>Worker_Separation</fullName>
    <active>true</active>
    <label>Worker Separation</label>
</RecordType>