force-app/main/default/objects/Human_Resource_Form__c/validationRules/HR_Cannot_edit_closed_records.validationRule-meta.xml
<ValidationRule>
    <fullName>HR_Cannot_edit_closed_records</fullName>
    <active>true</active>
    <description>Users cannot edit a closed HR record</description>
    <errorConditionFormula>AND( 
ISPICKVAL(PRIORVALUE(Status__c), &quot;Closed&quot;), 
$User.Override_Validation_Rules__c = False, 
$User.DelegatedPowerUserAccess__c = False,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;PGi Global Service Desk&quot;,
$Profile.Name &lt;&gt; &quot;PGi Human Resources Support&quot;,
$Profile.Name &lt;&gt; &quot;PGi Technical Support&quot;
 )</errorConditionFormula>
    <errorMessage>You cannot edit a closed record.</errorMessage>
</ValidationRule>