force-app/main/default/objects/Human_Resource_Form__c/validationRules/HR_Locations_required.validationRule-meta.xml
<ValidationRule>
    <fullName>HR_Locations_required</fullName>
    <active>true</active>
    <description>Users cannot approve or close HR record if locations is blank.</description>
    <errorConditionFormula>AND( 
$User.Override_Validation_Rules__c = False,
ISBLANK(Locations__c),
OR(
ISPICKVAL(Status__c, &quot;Closed&quot;), 
ISPICKVAL(Status__c, &quot;Approved&quot;)
   ))</errorConditionFormula>
    <errorDisplayField>Locations__c</errorDisplayField>
    <errorMessage>Locations must be filled out before continuing.</errorMessage>
</ValidationRule>