force-app/main/default/objects/Human_Resource_Form__c/validationRules/HR_MimicRequired_Salesforce.validationRule-meta.xml
<ValidationRule>
    <fullName>HR_MimicRequired_Salesforce</fullName>
    <active>true</active>
    <description>If Salesforce is in Logistical Needs, then User to Mimic is required.</description>
    <errorConditionFormula>AND( 
RecordTypeId  = &apos;0121B000001hgS7&apos;,
$User.Override_Validation_Rules__c = False,
 ISBLANK (User_to_mimic__c),
OR(
Includes(Logical_Access_Needs__c, &quot;Salesforce&quot;), 
Includes(Logical_Access_Needs__c, &quot;SF Folders-Reports&quot;), 
Includes(Logical_Access_Needs__c, &quot;SF Five9&quot;)
   ))</errorConditionFormula>
    <errorDisplayField>User_to_mimic__c</errorDisplayField>
    <errorMessage>User to Mimic must be filled out before continuing.</errorMessage>
</ValidationRule>