force-app/main/default/objects/Human_Resource_Form__c/listViews/All_New_Worker.listView-meta.xml
<ListView>
    <fullName>All_New_Worker</fullName>
    <columns>NAME</columns>
    <columns>Locations_Region__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Human_Resource_Form__c.New_Worker</value>
    </filters>
    <label>All New Worker</label>
    <language>en_US</language>
</ListView>