force-app/main/default/objects/Human_Resource_Form__c/listViews/All_Worker_Change.listView-meta.xml
<ListView>
    <fullName>All_Worker_Change</fullName>
    <columns>NAME</columns>
    <columns>Locations_Region__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Human_Resource_Form__c.Worker_Change</value>
    </filters>
    <label>All Worker Change</label>
    <language>en_US</language>
</ListView>