force-app/main/default/objects/Human_Resource_Form__c/listViews/All_Worker_Separation.listView-meta.xml
<ListView>
    <fullName>All_Worker_Separation</fullName>
    <columns>NAME</columns>
    <columns>Locations_Region__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Termination_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Human_Resource_Form__c.Worker_Separation</value>
    </filters>
    <label>All Worker Separation</label>
    <language>en_US</language>
</ListView>