force-app/main/default/objects/Human_Resource_Form__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Locations_Region__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Assigned_To__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>System_Access_Separation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
    <language>en_US</language>
</ListView>