force-app/main/default/objects/Human_Resource_Form__c/listViews/Needs_to_be_Approved.listView-meta.xml
<ListView>
    <fullName>Needs_to_be_Approved</fullName>
    <columns>NAME</columns>
    <columns>Locations_Region__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>System_Access_Separation_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Submitted</value>
    </filters>
    <label>*Needs to be Approved</label>
    <language>en_US</language>
    <sharedTo>
        <group>PGi_Human_Resources</group>
    </sharedTo>
</ListView>